# MoMEMta

./: .clang-format  .gitignore  .travis.yml  AUTHORS  BinnedTransferFunctionOnEnergy_8cc_source.html  BlockB_8cc_source.html  BlockB_8md_source.html  BlockD_8cc_source.html  BlockF_8cc_source.html  Boost_8cc_source.html  BreitWignerGenerator_8cc_source.html  BuildInitialState_8cc_source.html  CHANGELOG.md  CMakeLists.txt  CREDITS  ConfigurationReader_8cc_source.html  ConfigurationReader_8h_source.html  ConfigurationSet_8cc_source.html  ConfigurationSet_8h_source.html  Configuration_8cc_source.html  Configuration_8h_source.html  DMEM_8cc_source.html  EmptyModule_8cc_source.html  FlatTransferFunctionOnP_8cc_source.html  FlatTransferFunctionOnPhi_8cc_source.html  FlatTransferFunctionOnTheta_8cc_source.html  Flatter_8cc_source.html  GaussianTransferFunction_8cc_source.html  Graph_8cc_source.html  Graph_8h_source.html  HelAmps__sm_8h_source.html  IOnModuleDeclared_8h_source.html  InputTag_8cc_source.html  InputTag_8h_source.html  InputTag__fwd_8h_source.html  LICENSE  LibraryManager_8cc_source.html  LibraryManager_8h_source.html  Logging_8h_source.html  MEParameters_8h_source.html  (+428 more)
ME/: CMakeLists.txt
ME/SubProcesses/P1_Sigma_sm_gg_mupvmbmumvmxbx/: cpp_pp_ttx_fullylept.cc  cpp_pp_ttx_fullylept.h
ME/src/: HelAmps_sm.h  Parameters_sm.cc  Parameters_sm.h  process_base_classes.h
MatrixElements/: CMakeLists.txt
MatrixElements/dummy/: CMakeLists.txt  dummy_me.cc
MatrixElements/example_WW_llvv/: CMakeLists.txt
MatrixElements/example_WW_llvv/SubProcesses/P1_Sigma_sm_uux_epvemumvmx/: P1_Sigma_sm_uux_epvemumvmx.cc  P1_Sigma_sm_uux_epvemumvmx.h
MatrixElements/example_WW_llvv/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/example_WW_llvv/src/: HelAmps_sm.cc  Parameters_sm.cc
MatrixElements/pp_WW_fully_leptonic/: CMakeLists.txt
MatrixElements/pp_WW_fully_leptonic/SubProcesses/P1_Sigma_sm_uux_epvemumvmx/: P1_Sigma_sm_uux_epvemumvmx.cc  P1_Sigma_sm_uux_epvemumvmx.h
MatrixElements/pp_WW_fully_leptonic/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/pp_WW_fully_leptonic/src/: HelAmps_sm.cc  Parameters_sm.cc
MatrixElements/pp_ttx_fully_leptonic/: CMakeLists.txt
MatrixElements/pp_ttx_fully_leptonic/SubProcesses/P1_Sigma_sm_gg_mupvmbmumvmxbx/: P1_Sigma_sm_gg_mupvmbmumvmxbx.cc  P1_Sigma_sm_gg_mupvmbmumvmxbx.h  cpp_pp_ttx_fullylept.cc  cpp_pp_ttx_fullylept.h
MatrixElements/pp_ttx_fully_leptonic/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h  Subprocess.h
MatrixElements/pp_ttx_fully_leptonic/src/: HelAmps_sm.cc  Parameters_sm.cc
MatrixElements/pp_zh_z_ee_h_bb/: CMakeLists.txt
MatrixElements/pp_zh_z_ee_h_bb/SubProcesses/P1_Sigma_sm_uux_epembbx/: P1_Sigma_sm_uux_epembbx.cc  P1_Sigma_sm_uux_epembbx.h
MatrixElements/pp_zh_z_ee_h_bb/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/pp_zh_z_ee_h_bb/src/: HelAmps_sm.cc  Parameters_sm.cc
confs/: example.lua
dev/: BinnedTransferFunctionOnEnergy_8cc_source.html  BinnedTransferFunctionOnPt_8cc_source.html  BlockA_8cc_source.html  BlockB_8cc_source.html  BlockB_8md_source.html  BlockC_8cc_source.html  BlockD_8cc_source.html  BlockE_8cc_source.html  BlockF_8cc_source.html  BlockG_8cc_source.html  BreitWignerGenerator_8cc_source.html  BuildInitialState_8cc_source.html  CHANGELOG_8md_source.html  ConfigurationReader_8cc_source.html  ConfigurationReader_8h_source.html  Configuration_8cc_source.html  Configuration_8h_source.html  Constant_8cc_source.html  Counter_8cc_source.html  DMEM_8cc_source.html  EmptyModule_8cc_source.html  FlatTransferFunctionOnP_8cc_source.html  FlatTransferFunctionOnPhi_8cc_source.html  FlatTransferFunctionOnTheta_8cc_source.html  GaussianTransferFunctionOnEnergy_8cc_source.html  GaussianTransferFunctionOnPt_8cc_source.html  GaussianTransferFunction_8cc_source.html  Graph_8cc_source.html  Graph_8h_source.html  ILuaCallback_8h_source.html  IOnModuleDeclared_8h_source.html  InputTag_8cc_source.html  InputTag_8h_source.html  InputTag__fwd_8h_source.html  LazyTable_8cc_source.html  LazyTable_8h_source.html  LibraryManager_8cc_source.html  LibraryManager_8h_source.html  LinearCombinator_8cc_source.html  Logging_8h_source.html  (+698 more)
docs/: BlockB.md  Doxyfile.in  main.md
examples/: WW_fullyleptonic.cc  WW_fullyleptonic.cc~  WW_fullyleptonic.lua  example_momemta.py  tt_fullyleptonic.cc  tt_fullyleptonic.lua  tt_fullyleptonic_NWA.cc  tt_fullyleptonic_NWA.lua
include/: ConfigurationReader.h  ConfigurationSet.h  InputTag.h  (+10 more)
tests/crossSections/: CMakeLists.txt  blockA_WW_dilep.cc  blockA_WW_dilep.lua  blockA_secondaryBlockCD_zh_eebb.cc  blockA_secondaryBlockCD_zh_eebb.lua  blockA_zh_eebb.cc  blockA_zh_eebb.lua  blockB_WW_dilep.cc  blockB_WW_dilep.lua  blockB_secondaryBlockCD_WW_dilep.cc  blockB_secondaryBlockCD_WW_dilep.lua  blockB_zh_eebb.cc  blockB_zh_eebb.lua  blockD_ttx_dilep.cc  blockD_ttx_dilep.lua  blockF_WW_dilep.cc  blockF_WW_dilep.lua  blockG_WW_dilep.cc  blockG_WW_dilep.lua  blockG_zh_eebb.cc  blockG_zh_eebb.lua
tests/phaseSpaceGeneration/: CMakeLists.txt  crossSections.cc  phaseSpaceGenerationTests.cc  phaseSpaceGenerationTests.h  phaseSpaceVolume.cc
tests/phaseSpaceGeneration/crossSections/: blockA_WW_dilep.lua  blockB_WW_dilep.lua  blockB_secondaryBlockCD_WW_dilep.lua  blockD_ttx_dilep.lua  blockG_WW_dilep.lua
tests/phaseSpaceGeneration/phaseSpaceVolume/: README.md  blockA_secondaryBlockCD.lua  blockB_secondaryBlockA.lua  blockC.lua  blockE.lua  blockF.lua  blockG.lua
tests/phaseSpaceVolume/: CMakeLists.txt  README.md  blockA.cc  blockA.lua  blockA_secondaryBlockCD.cc  blockA_secondaryBlockCD.lua  blockB.cc  blockB.lua  blockB_secondaryBlockA.cc  blockB_secondaryBlockA.lua  blockB_secondaryBlockB.cc  blockB_secondaryBlockB.lua  blockB_secondaryBlockE.cc  blockB_secondaryBlockE.lua  blockD.cc  blockD.lua  blockF.cc  blockF.lua  blockG.cc  blockG.lua
tests/unit_tests/: CMakeLists.txt  ParameterSet.cc  graph.cc  lua.cc  modules.cc  pool.cc  unit_tests.cc
tests/unit_tests/lib/: optional.cc
tests/unit_tests/strings/: Scanner.cc
(+1238 files in other folders)
